# twincat-license-renewer

./: .env.example  .gitignore  README.md  pyproject.toml  renew.py
license_renewer/: __init__.py  __main__.py  captcha.py  config.py  flow.py  logging_setup.py  xae.py
tests/: test_captcha.py
